--- a/day2/templates/index2.html
+++ b/day2/templates/index2.html
@@ -5,10 +5,13 @@
     <title>Title</title>
 </head>
 <body>
-<h1> 你猜不着 </h1>
-<h1> 你猜不着 </h1>
-<h1> 你猜不着 </h1>
-<h1> 你猜不着 </h1>
-<p> {{username}}</p>
+这是通过模板渲染结果
+<p>{{age}}</p>
+<p>{{user}}</p>
+<p>{{names.boys}}</p>
+<p>{{names["boys"]}}</p>
+
+
+
 </body>
 </html>
